--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,7 +15,5 @@
 }
 
 body {
-  background-image: url(https://i.pinimg.com/originals/25/05/7c/25057cdaab436cc244f3c10ec60f03c5.jpg);
-  background-repeat: no-repeat;
-  background-size: 100vw 100vh;
+  background-color: #f7c742;
 }
