--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,5 +15,9 @@
 }
 
 body {
-  background-color: #f7c742;
+  background: radial-gradient(
+    circle,
+    rgba(238, 174, 202, 1) 0%,
+    rgba(148, 187, 233, 1) 100%
+  );
 }
